WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183055
CacheStorage::Engine::Caches::writeRecord is not always calling the completion handler
https://bugs.webkit.org/show_bug.cgi?id=183055
Summary
CacheStorage::Engine::Caches::writeRecord is not always calling the completio...
youenn fablet
Reported
2018-02-22 12:47:38 PST
CacheStorage::Engine::Caches::writeRecord is not always calling the completion handler
Attachments
Patch
(7.94 KB, patch)
2018-02-22 13:13 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-02-22 12:52:57 PST
We should really move all CacheStorage callbacks to CompletionHandler to catch these potential issues. In the meantime, there is an issue with Caches::writeRecord in private browsing mode and when network cache is not calling back the blob.
youenn fablet
Comment 2
2018-02-22 13:13:55 PST
Created
attachment 334471
[details]
Patch
WebKit Commit Bot
Comment 3
2018-02-22 14:50:24 PST
Comment on
attachment 334471
[details]
Patch Clearing flags on attachment: 334471 Committed
r228935
: <
https://trac.webkit.org/changeset/228935
>
WebKit Commit Bot
Comment 4
2018-02-22 14:50:26 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-02-22 14:51:33 PST
<
rdar://problem/37803382
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug